--- a/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
+++ b/admin/app/assets/stylesheets/spree/admin/global/_variables.scss
@@ -57,7 +57,7 @@ $theme-colors: (
 );
 
 $body-color: #333 !default;
-$body-bg: #FCFCFC !default;
+$body-bg: $gray-25 !default;
 $enable-shadows: false;
 $enable-responsive-font-sizes: true;
 $font-family-sans-serif: Inter, sans-serif !default;
@@ -207,4 +207,4 @@ $list-group-item-padding-x:         1rem !default;
 
 $header-height: 52px !default;
 $sidebar-width: 220px !default;
-$sidebar-bg: $gray-25 !default;
+$sidebar-bg: $body-bg !default;
