--- a/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
@@ -43,6 +43,8 @@
     align-items: center;
     justify-content: flex-start;
     background: transparent;
+    padding-top: 0.4rem;
+    padding-bottom: 0.4rem;
 
     color: $gray-700;
 
