--- a/admin/app/assets/stylesheets/spree/admin/components/_main.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_main.scss
@@ -12,11 +12,6 @@
   font-size: 1.25rem;
 }
 
-#header {
-  height: $header-height;
-  background-color: $body-bg;
-}
-
 .store-dropdown {
   display: flex;
   align-items: center;
@@ -26,11 +21,11 @@
   background-color: $sidebar-bg;
   width: $sidebar-width;
   border-right: 1px solid $border-color;
+  border-bottom: 1px solid $border-color;
   height: $header-height;
 }
 
 .store-dropdown-button {
-  background-color: $sidebar-bg;
   padding: 0.25rem;
   display: flex;
   align-items: center;
@@ -78,13 +73,13 @@
   gap: 0.5rem;
   width: $sidebar-width;
   background-color: $sidebar-bg;
-  border-right: 1px solid $border-color;
-  height: 100vh;
+  box-shadow: inset -1px 0 0 $border-color;
+  height: calc(100vh - $header-height);
   overflow-y: auto;
   overflow-x: hidden;
   position: fixed;
   top: $header-height;
-  color: $gray-700;
+  color: $gray-600;
   padding-top: 0.8rem;
 
   @media (max-width: 992px) {
@@ -94,9 +89,7 @@
   .nav {
     padding-left: 0.75rem;
     padding-right: 0.75rem;
-  }
-  .nav {
-    gap: 0.125rem;
+    gap: 0.2rem;
     display: flex;
     flex-direction: column;
   }
@@ -109,9 +102,10 @@
     padding-right: 0.35rem;
     padding-top: 0.35rem;
     padding-bottom: 0.35rem;
+    color: inherit;
 
     .ti {
-      font-size: 1rem;
+      font-size: 1.125rem !important;
       margin-right: 0.5rem;
       border-radius: $border-radius-sm;
       padding: 0.2rem 0.2rem;
@@ -119,6 +113,10 @@
 
     &:hover {
       background-color: $gray-50;
+
+      .ti {
+        color: theme-color('primary');
+      }
     }
     &.active {
       color: theme-color('primary');
@@ -142,9 +140,19 @@
     display: flex;
     flex-direction: column;
     list-style: none;
-  
-    margin-left: 1.5rem !important;
-  
+    margin-top: 0.25rem;
+    padding-left: 2rem;
+    &:before {
+      content: '';
+      position: absolute;
+      left: 1rem;
+      top: 0;
+      bottom: 0.25rem;
+      width: 1px;
+      background-color: $gray-200;
+    }
+    position: relative;
+
     .nav-link {
       font-weight: 400;
       padding-top: 0.25rem;
@@ -157,6 +165,17 @@
         font-weight: 600;
         background-color: transparent !important;
         box-shadow: none;
+
+        &:before {
+          content: '';
+          position: absolute;
+          left: calc(-1rem - 1px);
+          top: 10%;
+          width: 3px;
+          height: 80%;
+          background-color: theme-color('primary');
+          border-radius: $border-radius-sm;
+        }
       }
     }
   }
@@ -183,29 +202,39 @@
 }
 
 #content {
-  padding-top: 0.5rem;
   @media (min-width: 992px) {
     margin-left: $sidebar-width + 1px;
   }
 }
 
 #enterprise-edition-notice {
-  @extend .alert;
   @extend .alert-info;
 
   background-image: none;
-  padding-left: 1rem;
+  position: relative;
+  padding: 0.5rem 1rem;
+  padding-right: 2rem;
+  border-top: 1px solid $border-color;
   border-left: 0;
   border-right: 0;
   border-bottom: 0;
   border-radius: 0;
   font-size: $font-size-sm;
   margin-bottom: 0;
+  margin-right: 1px;
+  p {
+    margin-bottom: 0.5rem;
+  }
 
   .btn-close {
     position: absolute;
-    right: 0.5rem;
-    top: 0.5rem;
+    right: 0.25rem;
+    top: 0.25rem;
+    color: inherit !important;
+
+    &:hover {
+      background-color: transparent !important;
+    }
   }
 }
 
