--- a/admin/app/assets/stylesheets/spree/admin/components/_navbar.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_navbar.scss
@@ -1,10 +1,6 @@
-@media (max-width: 768px) {
-  header#header {
-    background-color: $gray-900 !important;
-    color: #fff !important;
-    border-bottom: 0 none !important;
-    position: sticky;
-    top: 0;
-    z-index: 1020;
-  }
+#header {
+  height: $header-height;
+  background-color: $body-bg;
+
+  box-shadow: inset 0 -1px 0 $border-color;
 }
