--- a/admin/app/views/spree/admin/shared/sidebar/_orders_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_orders_nav.html.erb
@@ -8,7 +8,7 @@
   <%= nav_item(orders_label.html_safe, spree.admin_orders_path, icon: 'inbox', active: orders_active) %>
   
   <% if orders_active && (ready_to_ship_orders_count&.positive? || can?(:manage, :checkouts)) %>
-    <ul class="ml-4 pl-1 mb-2 nav-submenu mt-1">
+    <ul class="nav-submenu">
       <% if ready_to_ship_orders_count&.positive? %>
         <% fulfill_label = Spree.t('admin.orders.orders_to_fulfill') %>
         <% fulfill_label += content_tag(:span, ready_to_ship_orders_count, class: 'badge ml-auto') %>
@@ -16,7 +16,7 @@
       <% end %>
 
       <% if can?(:manage, :checkouts) %>
-        <%= nav_item(Spree.t(:draft_orders), spree.admin_checkouts_path) %>
+        <%= nav_item(Spree.t(:draft_orders), spree.admin_checkouts_path, active: controller_name == 'checkouts' || (@order.present? && @order.completed?)) %>
       <% end %>
 
       <%= render_admin_partials(:store_orders_nav_partials) %>
