--- a/admin/app/views/spree/admin/shared/sidebar/_storefront_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_storefront_nav.html.erb
@@ -3,7 +3,7 @@
   <%= nav_item(Spree.t('admin.storefront'), spree.admin_themes_path, icon: 'building-store', active: storefront_active) %>
 
   <% if storefront_active %>
-    <ul class="ml-4 pl-1 mb-2 nav-submenu mt-1">
+    <ul class="nav-submenu">
       <%= nav_item(Spree.t(:themes), spree.admin_themes_path) %>
       
       <% if can?(:manage, Spree::Page) %>
