--- a/storefront/app/views/spree/checkout/edit.html.erb
+++ b/storefront/app/views/spree/checkout/edit.html.erb
@@ -39,7 +39,7 @@
               <%= Spree.t(:ship_address) %>
             </div>
             <div class="px-5 word-break">
-              <%= @order.ship_address.to_s.gsub('<br/>', ', ').html_safe %>
+              <%= sanitize(@order.ship_address.to_s.gsub('<br/>', ', ')) %>
             </div>
           </div>
           <div class="text-xs">
@@ -86,7 +86,7 @@
     <%= form_for @order, url: spree.update_checkout_path(@order.token, @order.state), html: { id: "checkout_form_#{@order.state}" } do |form| %>
       <div>
         <%= form.hidden_field :state_lock_version unless @order.errors.any? %>
-        <%= render @order.state, form: form %>
+        <%= render partial: "spree/checkout/#{@order.state}", locals: { form: form } %>
       </div>
       <div>
         <%= button_tag Spree.t(:save_and_continue),
