--- a/storefront/app/views/themes/default/spree/shared/_order_details.html.erb
+++ b/storefront/app/views/themes/default/spree/shared/_order_details.html.erb
@@ -24,6 +24,17 @@
   <%= render partial: 'spree/shared/order_shipment', collection: shipments, as: :shipment, cached: spree_base_cache_scope %>
 </ul>
 
+<% if order.store.prefers_special_instructions_enabled? && order.special_instructions.present? %>
+  <div class="p-4 lg:p-6 text-sm border">
+    <div class="uppercase tracking-widest mb-1">
+      <%= I18n.t('activerecord.attributes.spree/order.special_instructions') %>
+    </div>
+    <div class="!leading-[1.375rem] text-neutral-800">
+      <%= simple_format(order.special_instructions) %>
+    </div>
+  </div>
+<% end %>
+
 <div class="mt-6 bg-accent mb-24">
   <div class="grid grid-cols-1 lg:grid-cols-2 gap-4 lg:gap-6 p-4 lg:p-6 text-sm bg-border bg-accent-100">
     <!-- billing address -->
