--- a/admin/app/views/active_storage/_upload_form.html.erb
+++ b/admin/app/views/active_storage/_upload_form.html.erb
@@ -36,7 +36,7 @@
 
         <% if crop %>
           <span class="text-muted ml-2 text-center small mt-2">
-            Recommended size: <%= width %>x<%= height %>px
+            <%= Spree.t('admin.recommended_size') %>: <%= width %>x<%= height %>px
           </span>
         <% end %>
       </div>
