modified:   admin/app/views/spree/admin/admin_users/_form.html.erb 	modified:   admin/app/views/spree/admin/custom_domains/_custom_domains.html.erb 	modified:   admin/app/views/spree/admin/custom_domains/_form.html.erb 	modified:   admin/app/views/spree/admin/custom_domains/index.html.erb 	modified:   admin/app/views/spree/admin/dashboard/_store_preview.html.erb 	modified:   admin/app/views/spree/admin/dashboard/analytics.html.erb 	modified:   admin/app/views/spree/admin/invitations/_invitation.html.erb 	modified:   admin/app/views/spree/admin/invitations/new.html.erb 	modified:   admin/app/views/spree/admin/oauth_applications/index.html.erb 	modified:   admin/app/views/spree/admin/option_types/_form.html.erb 	modified:   admin/app/views/spree/admin/option_types/index.html.erb 	modified:   admin/app/views/spree/admin/orders/_customer_summary.html.erb 	modified:   admin/app/views/spree/admin/payment_methods/_form.html.erb 	modified:   admin/app/views/spree/admin/payment_methods/index.html.erb 	modified:   admin/app/views/spree/admin/profile/edit.html.erb 	modified:   admin/app/views/spree/admin/properties/index.html.erb 	modified:   admin/app/views/spree/admin/shared/_content_header.html.erb 	modified:   admin/app/views/spree/admin/shared/_seo.html.erb 	modified:   admin/app/views/spree/admin/shipping_methods/form/_display.html.erb 	modified:   admin/app/views/spree/admin/shipping_methods/form/_estimated_transit_business_days.html.erb 	modified:   admin/app/views/spree/admin/shipping_methods/form/_tracking_url.html.erb 	modified:   admin/app/views/spree/admin/shipping_methods/index.html.erb 	modified:   admin/app/views/spree/admin/stock_locations/_form.html.erb 	modified:   admin/app/views/spree/admin/stock_transfers/new.html.erb 	modified:   admin/app/views/spree/admin/stock_transfers/show.html.erb 	modified:   admin/app/views/spree/admin/stores/form/_emails.html.erb 	modified:   admin/app/views/spree/admin/stores/form/_policies.html.erb 	modified:   admin/app/views

--- a/admin/app/views/spree/admin/oauth_applications/index.html.erb
+++ b/admin/app/views/spree/admin/oauth_applications/index.html.erb
@@ -9,8 +9,7 @@
 <%= content_for :page_alerts do %>
   <div class="alert alert-info mb-3">
     <p>
-      Here you can manage API keys to access the <%= link_to 'Platform API', 'https://spreecommerce.org/docs/api-reference/platform/authentication', target: '_blank' %>.
-      For headless storefronts you don't need an API key, please use the <%= link_to 'Storefront API', 'https://spreecommerce.org/docs/api-reference/storefront/authentication', target: '_blank' %>.
+      <%= Spree.t('admin.oauth_applications.info').html_safe %>
     </p>
   </div>
 <% end %>
@@ -22,7 +21,7 @@
         <thead>
           <tr>
             <th><%= Spree.t(:name) %></th>
-            <th>Client ID</th>
+            <th><%= Spree.t(:client_id) %></th>
             <th><%= Spree.t('admin.oauth_applications.scopes') %></th>
             <th><%= Spree.t('admin.oauth_applications.last_used') %></th>
             <th></th>
